--- a/styles/listSort.module.scss
+++ b/styles/listSort.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 
     label{
         padding-right: 10px;
@@ -26,4 +27,17 @@
             opacity: 0.75;
         }
     }
+
+    svg{
+        position: absolute;
+        right: 10px;
+        pointer-events: none;
+    }
+}
+
+@media(max-width: 690px){
+    .sort{
+        margin-bottom: 20px;
+    }
+
 }
