Tags, extra metada

--- a/styles/listSort.module.scss
+++ b/styles/listSort.module.scss
@@ -11,6 +11,7 @@
     select{
         height: 30px;
         padding: 0 15px;
+        padding-right: 30px;
         line-height: 32px;
         border: 0px;
         outline: 0;
