--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -12,6 +12,8 @@
        opacity: 0.75;
     }
 
+  
+
     h3{
         display: flex; 
         align-items: center;
@@ -25,8 +27,16 @@
             overflow: hidden;
             text-overflow: ellipsis;
             min-width: 0;
-            display: flex;
-            align-items: center;
+            display: grid;
+            grid-template-columns: 35px 1fr;
+
+            p{
+                display: flex;
+                align-items: center;
+                line-height: 18px !important;
+            }
+
+        
 
             &:hover, &:focus, &:active{
                 opacity: 0.76;
@@ -286,6 +296,8 @@
 
     h3{
         font-size: 30px;
+        display: grid;
+        grid-template-columns: 40px 1fr;
     }
 
     p{
