--- a/styles/search.module.scss
+++ b/styles/search.module.scss
@@ -10,13 +10,88 @@
     background-color: var(--card-bg);
     display: inline-block;
     line-height: 55px;
+    position: relative;
 
     .searchInner{
         display: flex;
         justify-content: flex-start;
         align-items: center;
+
+        
     }
 
+    .tip {
+        position: absolute;
+        right: -40px;
+        top: 0px;
+
+        a{
+            display: inline-block;
+            color: inherit;
+            margin-top: 2px;
+        }
+
+        &:focus-within{
+            .tipData{
+                opacity: 1;
+                pointer-events: auto;
+            }
+        }
+
+        svg{
+            width: 20px;
+            height: 20px;
+            padding-left: 0px !important;
+            cursor: pointer;
+            transition: 0.3s all ease-in-out;
+
+            &:hover{
+                opacity: 0.65;
+            }
+
+        }
+
+        .tipData{
+            opacity: 0;
+            pointer-events: none;
+            background-color: var(--accent);
+            color: #fff;
+            box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.15);
+            padding: 20px;
+            border-radius: 10px;
+            position: absolute;
+            top: 50px;
+            z-index: 9;
+            min-width: 320px;
+            transition: 0.3s all ease-in-out;
+
+            p{
+                margin: 0px;
+                margin-bottom: 10px;
+                line-height: 18px;
+            }
+
+            ul{
+                padding: 0px;
+                list-style-type: none;
+                margin: 0px;
+
+                li{
+                    margin: 0px;
+                    padding: 0px;
+                    line-height: 20px;
+                    margin-bottom: 5px;
+
+                    code{
+                        background-color: var(--main-bg);
+                        color: var(--textColor);
+                        padding: 2px 5px;
+                        border-radius: 2px;
+                    }
+                }
+            }
+        }
+    }
 
     svg{
         padding-left: 15px;
@@ -53,4 +128,10 @@
 
 .noresults{
     position: absolute;
+}
+
+@media(max-width: 790px){
+    .tip{
+        display: none;
+    }
 }
