Fix search back nav w/ query

--- a/styles/search.module.scss
+++ b/styles/search.module.scss
@@ -83,7 +83,7 @@
                     margin-bottom: 5px;
 
                     code{
-                        background-color: var(--main-bg);
+                        background-color: var(--card-bg);
                         color: var(--textColor);
                         padding: 2px 5px;
                         border-radius: 2px;
