--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -221,12 +221,10 @@
     }
 
     .selectApp {
-        font-size: 15px !important;
         background-color: var(--main-bg) !important;
         border-radius: 50px;
         text-decoration: none;
         color: var(--textColor);
-        font-size: 18px;
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.18);
         transition: 0.3s all ease-in-out;
         cursor: pointer;
@@ -236,8 +234,8 @@
         outline: 0;
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin-left: auto;
+        // justify-content: center;
+        // margin-left: auto;
 
 
         svg{
