--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -229,14 +229,15 @@
         transition: 0.3s all ease-in-out;
         cursor: pointer;
         border: 0px;
-        width: 35px;
-        height: 35px;
+        width: 35px !important;
+        height: 35px !important;
         outline: 0;
         display: flex;
         align-items: center;
-        // justify-content: center;
-        // margin-left: auto;
-
+        justify-content: center;
+        margin-left: auto;
+        flex-shrink: 0;
+        padding: 0px !important;
 
         svg{
             padding-right: 0px !important;
