--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -7,12 +7,13 @@
     overflow: hidden;
     transition: 0.1s all ease-in-out;
     box-shadow: 0px 3px 5px #00000026;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 
     &:focus{
        opacity: 0.75;
     }
-
-  
 
     h3{
         display: flex; 
@@ -146,6 +147,7 @@
         svg{
             position: absolute;
             right: 0;
+            pointer-events: none;
         }
 
         .versionSelector{
@@ -163,8 +165,7 @@
             position: absolute;
             top: -15px;
             height: 50px;
-
-            
+            transition: 0.3s all ease-in-out;            
         }
     }
     
@@ -172,16 +173,17 @@
     .metaData{
         list-style-type: none;
         padding: 0px;
+        margin-top: auto;
 
-        .noHover{
-            cursor: initial;
+        .hover{
+            cursor: pointer;
 
             // svg{
             //     color: var(--textColor);
             // }
             
             &:hover{
-                opacity: 1;
+                opacity: 0.75;
             }
         }
         
@@ -192,17 +194,19 @@
             align-items: center;
             justify-content: flex-start;
             font-size: 15px;
-            cursor: pointer;
-
-            &:hover{
-                opacity: 0.75;
-            }
-
+            
+    
             a{
                 text-decoration: none;
                 color: inherit;
                 display: flex;
                 align-items: center;
+                cursor: pointer;
+                transition: 0.3s all ease-in-out;
+
+                &:hover{
+                    opacity: 0.75;
+                }   
             }
 
             svg{
