--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -18,6 +18,25 @@
         }
     }
 
+    .justIcon{
+        padding: 0px;
+        width: 50px;
+        
+        svg{
+            padding-right: 0px;
+        }
+    }
+
+    .user{
+        padding: 0px;
+
+        img{
+            width: 50px;
+            height: 50px;
+            margin: 0px;
+        }
+    }
+
     a{
         font-size: 20px;
         height: 50px;
@@ -52,15 +71,13 @@
         }
     }
 
-    span:nth-child(4){
-        margin-right: 15px;
-    }
 
     span{
         width: 50px;
         height: 50px;
         border-radius: 50%;
         font-size: 22px;
+        margin-right: 15px;
 
         svg{
             padding-top: 15px;
