Improved packs creation flow

--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -1,3 +1,10 @@
+.pack{
+    background-color: transparent !important;
+    padding: 0px !important;
+    box-shadow: none !important;
+    border-radius: 0px !important;
+}
+
 .single{
     background-color: var(--card-bg);
     padding: 20px;
