--- a/styles/create.module.scss
+++ b/styles/create.module.scss
@@ -1,8 +1,24 @@
+.content{
+    max-width: 800px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
 .createForm{
+    max-width: 500px;
+    margin: 0 auto;
+    
+    .formError{
+        padding-top: 10px;
+        display: block;
+        opacity: 0.75;
+        font-size: 14px;
+    }
+
     label{
         display: block;
-        font-weight: 700;
-        font-size: 18px;
+        font-size: 16px;
         margin-bottom: 30px;
     }
 
@@ -10,7 +26,7 @@
         display: block;
         margin: 10px 0;
         border: 0px;
-        padding: 0px 15px;
+        padding: 0px 25px;
         outline: 0px;
         height: 50px;
         background-color: var(--card-bg);
@@ -20,4 +36,40 @@
         font-family: inherit;
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
     }
+
+    button{
+        margin: 0 auto;
+    }
 }
+
+.button{
+    background-color: var(--card-bg);
+    padding: 10px 20px;
+    border-radius: 50px;
+    margin-top: 15px;
+    display: inline-block;
+    text-decoration: none;
+    color: var(--textColor);
+    font-size: 18px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+    transition: 0.3s all ease-in-out;
+    cursor: pointer;
+    border: 0px;
+    outline: 0;
+    font-family: 'Nunito', sans-serif;
+
+    div{
+        display: flex;
+        place-items: center;
+    }
+
+    &:hover, &:focus{
+        opacity: 0.75;
+    }
+
+    svg{
+        padding-right: 10px;
+        margin-top: 2px;
+        font-size: 20px;
+    }
+} 
