--- a/styles/create.module.scss
+++ b/styles/create.module.scss
@@ -34,11 +34,14 @@
         border-radius: 50px;
         font-size: 15px;
         font-family: inherit;
+        color: var(--textColor);
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
     }
 
     button{
         margin: 0 auto;
+        background-color: var(--accent);
+        color: #fff;
     }
 }
 
