--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -1,6 +1,10 @@
 .nav{
     display: flex;
 
+    .ddOnly{
+        display: none;
+    }
+
     span, a{
         background-color: var(--card-bg);
         cursor: pointer;
@@ -85,26 +89,84 @@
     }
 }
 
-@media(max-width: 550px){
-    .nav{
-        a{
-            border-radius: 50%;
-            padding: 0px;
-            width: 50px;
+.dropdown{
+    display: none;
+    background-color: var(--card-bg);
+    cursor: pointer;
+    user-select: none;
+    transition: 0.3s all ease-in-out;
+    align-self: center;
+    justify-content: center;
+    place-items: center;
+    border: 0px !important;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 22px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+    color: inherit;
 
-            p{
-                display: none;
-            }
-            
-            svg{
-                padding-right: 0px;
-            }
-        }
+    &:hover{
+        opacity: 0.75;
     }
 }
 
-@media(max-width: 460px){
+
+@media(max-width: 590px){
     .nav{
-        margin-top: 20px;
+        right: 30px !important;
+    }
+}
+
+@media(max-width: 900px){
+
+    .dropdown{
+        display: flex;
+    }
+
+    .nav{
+        display: none;
+        position: absolute;
+        right: 55px;
+        top: 80px;
+        z-index: 999;
+        width: 200px;
+        background-color: var(--card-bg);
+        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        text-align: left;
+        padding: 0 20px;
+
+        a, span{
+            background-color: transparent;
+            box-shadow: none;
+            border-radius: 0px;
+            width: 100%;
+            margin: 0px;
+            padding: 0px;
+            justify-content: flex-start;
+        }
+
+        .ddOnly{
+            display: block;
+            font-size: 20px;
+            height: 50px;
+            margin: 0px;
+            line-height: 50px;
+        }
+
+        .justIcon{
+            width: auto;
+            
+            svg{
+                padding-right: 10px;
+            }
+        }
+
+        .user img{
+            width: 23px;
+            height: 23px;
+            margin-right: 10px;
+        }
     }
 }
