--- a/styles/packPreview.module.scss
+++ b/styles/packPreview.module.scss
@@ -9,6 +9,7 @@
     justify-content: flex-start;
     color: var(--textColor);
     text-decoration: none;
+    height: 100%;
 
     &:hover, &:focus{
         .packMeta{
