--- a/styles/base.scss
+++ b/styles/base.scss
@@ -762,7 +762,7 @@ button{
 }
 
 #starWine{
-    background-image: linear-gradient(12deg, rgb(110, 27, 220), rgb(241, 56, 167))
+    background-image: linear-gradient(12deg, rgb(110, 27, 220), rgb(241, 56, 167) 100%)
 }
 
 #purpleDivision{
