--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -1,8 +1,19 @@
 .footer{
-    padding: 30px 0;
+    margin-top: 30px;
     font-size: 20px;
-    text-align: center;
-    padding-bottom: 60px;
+    display: flex;
+    padding: 20px 0;
+    justify-content: space-between;
+
+    .brand{
+        display: flex;
+        justify-content: flex-start;
+
+        p{
+            margin: 0px;
+            opacity: 0.75;
+        }
+    }
 
     a{
         color: var(--textColor);
@@ -15,20 +26,42 @@
     }
 
     img{
-        width: 50px;
+        width: 35px;
+        height: 16.5px;
         transition: 0.3s all ease-in-out;
+        padding-top: 5px;
         cursor: pointer;
+        margin-right: 10px;
 
         &:hover{
             opacity: 0.75;
         }
     }
+
+    .heart{
+        color: #af0d16;
+    }
+
+    ul{
+        display: flex;
+        padding: 0px;
+        margin: 0px;
+        list-style-type: none;
+
+        li{
+            margin-left: 20px;
+            
+            a{
+                opacity: 0.75;
+
+                &:hover{
+                    opacity: 1;
+                }
+            }
+        }
+    }
 }
 
-.disclaimer{
-    opacity: 0.75;
-    font-size: 18px;
-}
 
 .backToTop {
     display: none;
@@ -94,5 +127,28 @@
 @media(max-width: 1490px) and (min-width: 791px){
     .selectionOpen.backToTop{
         bottom: 90px;
+    }
+}
+
+@media(max-width: 791px){
+    .brand p{
+        display: none;
+    }
+}
+
+@media(max-width: 490px){
+    .footer{
+        flex-direction: column;
+        justify-content: center;
+
+        .brand{
+            display: inline-block;
+            margin: 0 auto;
+            margin-bottom: 10px;
+        }
+
+        ul{
+            justify-content: center;
+        }
     }
 }
