--- a/styles/recommendations.module.scss
+++ b/styles/recommendations.module.scss
@@ -41,7 +41,7 @@
 
 .recommendation{
     background-color: var(--card-bg);
-    border-radius: 0px 0px 10px 10px;
+    border-radius: 10px;
     overflow: hidden;
     transition: 0.1s all ease-in-out;
     box-shadow: 0px 3px 5px #00000026;
