--- a/styles/recommendations.module.scss
+++ b/styles/recommendations.module.scss
@@ -1,7 +1,7 @@
 .recommendations{
     margin: 16px 0;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 15px;
 }
 
@@ -9,6 +9,15 @@
     .recommendations{
         grid-template-columns: 1fr;
     }
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
 }
 
 .packHeader{
@@ -22,10 +31,15 @@
 
     &:hover{
         opacity: 0.85;
+
+        svg{
+          animation: bounce 0.8s ease-in-out infinite forwards ;
+        }
     }
 
     svg{
         font-size: 20px;
+        transition: 0.3s all ease-in-out;
     }
 
     h3{
@@ -131,6 +145,18 @@
 
         &:active, &:focus{
             opacity: 1 !important;
+        }
+    }
+}
+
+.viewPack{
+    svg{
+        transition: 0.3s all ease-in-out;
+    }
+
+    &:hover{
+        svg{
+            padding-left: 5px;
         }
     }
 }
