--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -369,19 +369,33 @@
 
             a{
                 text-decoration: none;
-                background-color: var(--card-bg);
-                padding: 10px 15px;
-                border-radius: 50px;
+                padding: 5px 10px;
+                border: 2px solid var(--card-bg);
+                border-radius: 15px;
                 color: var(--textColor);
                 display: inline-block;
+                font-size: 14px;
                 box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.18);
                 transition: 0.3s all ease-in-out;
 
                 &:hover, &:focus, &:active{
                     background-color: var(--accent);
+                    border: 2px solid var(--accent);
                     color: #fff;
                 }
             }
         }
+    }
+}
+
+.largeAppButtons{
+    display: flex;
+
+    .shareApp{
+        margin-left: 10px !important;
+        height: 44px !important;
+        margin-top: 20px !important;
+        background-color: transparent;
+        border: 3px solid var(--card-bg);
     }
 }
