--- a/styles/base.scss
+++ b/styles/base.scss
@@ -754,7 +754,7 @@ button{
 }
 
 #winterNeva{
-    background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+    background-image: linear-gradient(to top, #a8e063, #56ab2f);
 }
 
 #deepBlue{
