--- a/styles/base.scss
+++ b/styles/base.scss
@@ -770,7 +770,7 @@ button{
 }
 
 #loveKiss{
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-image: linear-gradient(to top, #ff0844 0%, #ebaf35 100%);
 }
 
 .lightText{
