--- a/styles/packsAppList.module.scss
+++ b/styles/packsAppList.module.scss
@@ -70,3 +70,63 @@
         margin-bottom: 0px;
     }
 }
+
+.addModal{
+    position: absolute;
+    outline: none;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: var(--main-bg);
+    border: 3px solid var(--accent);
+    top: 50%;
+    left: 50%;
+    min-width: 700px;
+    min-height: 450px;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.18);
+
+    .modalHeader{
+        display: flex;
+        justify-content: space-between;
+        place-items: center;
+        margin-bottom: 10px;
+
+        h2{
+            margin: 0px;
+        }
+
+        svg{
+            vertical-align: middle;
+            font-size: 25px;
+            transition: 0.3s all ease-in-out;
+            cursor: pointer;
+
+            &:hover{
+                opacity: 0.75;
+            }
+        }
+    }
+    
+}
+
+.modalOverlay{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.35);
+}
+
+@media(max-width: 790px){
+    .addModal{
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        border: 0px;
+        transform: none;
+        box-sizing: border-box;
+        border-radius: 0px;
+    }
+}
