--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -398,3 +398,11 @@
     margin-right: 10px;
     user-select: none;
 }
+
+.noBorder{
+    border: 0px;
+    padding: 15px !important;
+    background-color: var(--card-bg) !important;
+    border-radius: 10px !important;
+    box-shadow: 0px 3px 5px #00000026 !important;
+}
