--- a/styles/base.scss
+++ b/styles/base.scss
@@ -120,6 +120,11 @@ input[type="text"].search{
     align-items: center;
 }
 
+.box2{
+    display: flex;
+    align-items: center;
+}
+
 .illu-box{
     display: grid;
     grid-template-columns: 1fr 1fr;
