--- a/styles/base.scss
+++ b/styles/base.scss
@@ -795,3 +795,11 @@ button{
 .center{
     margin: 0 auto;
 }
+
+@media(max-width: 500px){
+    .box2{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+}
