Fix dark theme dropdown and simplify scripts

--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -160,6 +160,7 @@
 
             option{
                 background-color: var(--card-bg);
+                color: var(--textColor)
             }
             
         }
