--- a/styles/exportApps.module.scss
+++ b/styles/exportApps.module.scss
@@ -17,7 +17,7 @@
     }
 
     textarea{
-        width: 600px;
+        width: 100%;
         padding: 20px;
         background-color: var(--card-bg);
         border: 0px;
@@ -27,10 +27,12 @@
         outline: 0;
         resize: none;
         display: block;
+        margin-right: 0px;
         margin-bottom: 10px;
-        min-height: 100px;
+        min-height: 120px;
         color: var(--textColor);
         overflow: hidden;
+        box-sizing: border-box;
     }
 }
 
@@ -40,6 +42,10 @@
 
 .displaySection {
     display: block;
+}
+
+.reverse{
+    flex-direction: row-reverse;
 }
 
 .tabHeader{
@@ -70,6 +76,44 @@
 
         textarea{
             width: auto !important;
+        }
+    }
+}
+
+.expandBlock{
+    margin-bottom: 20px;
+    
+    .expandHeader{
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        transition: 0.3s all ease-in-out;
+
+        &:hover{
+            opacity: 0.75;
+        }
+
+        svg{
+            margin-right: 5px;
+            transition: 0.2s all ease-in-out;
+        }
+
+        svg.expandedIcon{
+            transform: rotate(180deg);
+        }
+    }
+
+    label{
+        display: flex;
+        align-items: center;
+        margin-bottom: 5px;
+
+        input{
+            margin-right: 10px;
+        }
+
+        p{
+            margin: 0px;
         }
     }
 }
