add colours and styles

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -6,6 +6,7 @@
     --accent: #9b2eff;
     --altAccent: #7214c9;
     --error: maroon;
+    --positive-bg:#afffc9;
 
     .sun{
         display: none;
@@ -20,6 +21,7 @@
     --accent: #9b2eff;
     --altAccent: #6b14bd;
     --error: rgb(255 149 149);
+    --positive-bg:#19a246;
     
     .react-loading-skeleton{
         background-color: #2d2f30 !important;
