--- a/styles/base.scss
+++ b/styles/base.scss
@@ -809,3 +809,47 @@ button{
 .fBox{
     margin-top: auto;
 }
+
+input[type="radio"]{
+    border-radius: 50% !important;
+}
+
+input[type="checkbox"], input[type="radio"]{
+    border: 2px solid var(--textColor) !important;
+    border-radius: 2px;
+    display: inline-block;
+    height: 15px !important;
+    margin-bottom: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 10px !important;
+    margin-top: 0px !important;
+    outline: none !important;
+    transition: all 100ms linear !important;
+    vertical-align: middle !important;
+    width: 15px !important;
+    -webkit-appearance: none !important;
+    cursor: pointer;
+    flex-shrink: 0;
+
+    &:hover {
+        border: 2px solid var(--altAccent) !important;
+    }
+
+    &:focus {
+        border: 2px solid var(--altAccent) !important;
+    }
+
+    &:checked {
+        background-color: var(--main-bg);
+        border: 5px solid var(--accent) !important;
+
+        &:before {
+            display: block;
+        }
+
+        &:hover{
+            border: 5px solid var(--altAccent) !important;
+        }
+    }
+
+}
